Fix issue #1 (wrapping of code).

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body {
 	text-shadow:lime 0 0 6px;
 }
 
-#code {
+code, #code {
 	background-color:transparent;
 	color:lime;
 	caret-color:lime;
@@ -35,6 +35,7 @@ body {
 	outline:0;
 	tab-size:4;
 	text-shadow:lime 0 0 6px;
+	white-space: nowrap;
 }
 
 #submit {
